--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,6 @@ services:
       - 8000:8000
     depends_on:
       - ollama1
-      - ollama2
   ollama1:
     # build: .
     container_name: ollama
@@ -31,28 +30,29 @@ services:
             - driver: nvidia
               device_ids: ["0"]
               capabilities: [gpu]
-ollama2:
-    # build: .
-    container_name: ollama
-    image: ollama/ollama
-    healthcheck:
-      test: ollama --version || exit 1
-      interval: 10s
-    ports:
-      - "11434:11433"
-    # env_file: ollama_rocm_env
-    volumes:
-      - ./ollama:/root/.ollama
-    group_add:
-      - video
-    stdin_open: true
-    tty: true
-    privileged: true
-    restart: unless-stopped
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              device_ids: ["1"]
-              capabilities: [gpu]
+#ollama2:
+#    # build: .
+#    container_name: ollama
+#    image: ollama/ollama
+#    healthcheck:
+#      test: ollama --version || exit 1
+#      interval: 10s
+#    ports:
+#      - "11434:11433"
+#    # env_file: ollama_rocm_env
+#    volumes:
+#      - ./ollama:/root/.ollama
+#    group_add:
+#      - video
+#    stdin_open: true
+#    tty: true
+#    privileged: true
+#    restart: unless-stopped
+#    deploy:
+#      resources:
+#        reservations:
+#          devices:
+#            - driver: nvidia
+#              device_ids: ["0"]
+#              capabilities: [gpu]
+#
